# air_monitor_back

./: .dockerignore  .gitignore  DEPLOY.md  Makefile  README.md  conftest.py  pyproject.toml
.githooks/: pre-commit
apps/: __init__.py
apps/authentication/: __init__.py  models.py
apps/authentication/api/: __init__.py  router.py  schemas.py  utils.py
apps/authentication/migrations/: __init__.py
apps/authentication/security/: __init__.py  jwt.py
apps/authentication/services/: __init__.py  authentication.py  context.py  tokens.py
apps/authentication/tests/: __init__.py  conftest.py  factories.py
apps/common/: __init__.py  middleware.py  models.py
apps/common/api/: __init__.py  health.py
apps/common/migrations/: __init__.py
apps/monitoring/: __init__.py  admin.py  config.py  models.py  querysets.py  tasks.py
apps/monitoring/api/: __init__.py  router.py  utils.py
apps/monitoring/ingestion/: __init__.py  types.py  utils.py
apps/monitoring/management/: __init__.py
apps/monitoring/migrations/: 0001_initial.py  0002_initial.py  0003_modelversion_training_config.py  0004_forecastevaluation.py  0005_experimentrun.py  0006_experimentseries_and_run_series.py  0007_experimentrun_config_fingerprint.py  (+3 more)
apps/users/: __init__.py  admin.py  managers.py  models.py  querysets.py
config/: celery.py  urls.py
config/api/: __init__.py
config/settings/: __init__.py  base.py  production.py  test.py
docker/app/: Dockerfile
docker/compose/: base.yml  deploy.yml  dev.yml  infra.yml  volumes.yml
docker/env/: app.deploy.example.env  db.deploy.example.env
(+85 files in other folders)
